src/test/ui/moves-based-on-type-match-bindings.stderr
error[E0382]: use of partially moved value: `x`
  --> $DIR/moves-based-on-type-match-bindings.rs:26:12
   |
23 |         Foo {f} => {}
   |              - value moved here
...
26 |     touch(&x); //~ ERROR use of partially moved value: `x`
   |            ^ value used here after move
   |
   = note: move occurs because `x.f` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

